--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,8 @@ else()
 
   file(GLOB SOURCES src/*.cpp)
   include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
-  add_executable(sample sample/main.cpp ${SOURCES})
-  target_link_libraries(sample ${OpenCV_LIBS})
+  add_executable(monocular sample/monocular.cpp ${SOURCES})
+  target_link_libraries(monocular ${OpenCV_LIBS})
+  add_executable(stereo sample/stereo.cpp ${SOURCES})
+  target_link_libraries(stereo ${OpenCV_LIBS})
 endif()
