--- a/data/kinectv2_00/config.yaml
+++ b/data/kinectv2_00/config.yaml
@@ -10,33 +10,33 @@ distortion1: !!opencv-matrix
    rows: 1
    cols: 5
    dt: f
-   data: [ 3.86666209e-02, -3.99871208e-02, -9.50136688e-03,
-       -1.27451518e-03, -9.53565538e-03 ]
+   data: [ 3.86666432e-02, -3.99870388e-02, -9.50136501e-03,
+       -1.27451343e-03, -9.53587424e-03 ]
 resolution1: [ 1920, 1080 ]
-RMS1: 4.3354014394842127e-01
+RMS1: 4.3354020645676289e-01
 intrinsic2: !!opencv-matrix
    rows: 3
    cols: 3
    dt: f
-   data: [ 3.63380585e+02, 0., 2.56422729e+02, 0., 3.64069214e+02,
+   data: [ 3.63380585e+02, 0., 2.56422729e+02, 0., 3.64069244e+02,
        2.02849380e+02, 0., 0., 1. ]
 distortion2: !!opencv-matrix
    rows: 1
    cols: 5
    dt: f
-   data: [ 8.67825300e-02, -3.04656208e-01, -3.39771085e-03,
-       1.19115319e-03, 1.42217547e-01 ]
+   data: [ 8.67824927e-02, -3.04655820e-01, -3.39770759e-03,
+       1.19115715e-03, 1.42216697e-01 ]
 resolution2: [ 512, 424 ]
-RMS2: 1.9146029370771464e-01
+RMS2: 1.9146024408165496e-01
 rotation: !!opencv-matrix
    rows: 3
    cols: 3
    dt: f
-   data: [ 9.99972284e-01, -5.25548868e-03, -5.27454726e-03,
-       5.22877742e-03, 9.99973476e-01, -5.06519945e-03, 5.30102756e-03,
-       5.03747957e-03, 9.99973238e-01 ]
+   data: [ 9.99972284e-01, -5.25549427e-03, -5.27461292e-03,
+       5.22878300e-03, 9.99973476e-01, -5.06520225e-03, 5.30109322e-03,
+       5.03748190e-03, 9.99973238e-01 ]
 translation: !!opencv-matrix
    rows: 3
    cols: 1
    dt: f
-   data: [ -5.63194580e+01, -1.23693800e+01, -3.15580058e+00 ]
+   data: [ -5.63194603e-02, -1.23693841e-02, -3.15581402e-03 ]
